# sandbox

./: .gitignore  README.md
cpp/Qt/: README.txt
cpp/Qt/CapsuleCommander/: CapsuleCommander.pro  CapsuleWindow.cpp  CapsuleWindow.h  CapsuleWindow.ui  main.cpp
cpp/Qt/QElapsedTimerTest/src/: main.cpp
cpp/Qt/bluetooth-sandbox/: CMakeLists.txt  WirelessCrawler.cpp  WirelessCrawler.h  main.cpp
cpp/Qt/cpp-lang-sandbox/: CMakeLists.txt  main.cpp
cpp/VS/: README.txt
cpp/VS/HelloWorld/: HelloWorld.sln
cpp/VS/HelloWorld/HelloWorld/: HelloWorld.vcxproj
cpp/VS/HelloWorld/HelloWorld/src/: Main.cpp
python/: README.txt
